--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h3>Skolēni</h3>
   <!--savu vārdu pievieno jaunā paragrāfā zem komentāra--> 
 	  <p>Raivis</p>
-	  
+	  <p>Ralfs</p>
 	  <script src="index.js"></script>
   </body>
 </html>
