--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <h3>Skolēni</h3>
   <!--savu vārdu pievieno jaunā paragrāfā zem komentāra--> 
 	  <p>Raivis</p>
+	  <p>Endijs</p>
 	  
 	  <script src="index.js"></script>
   </body>
