--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
   <h3>Skolēni</h3>
-  <!--savu vārdu pievieno jaunā paragrāfā zem komentāra--> 
+  <!--savu vārdu pievieno jaunā paragrāfā zem komentāra-->
+	  <p>Donats</p>
 	  
 	  <script src="index.js"></script>
   </body>
