--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
   <h3>Skolēni</h3>
   <!--savu vārdu pievieno jaunā paragrāfā zem komentāra--> 
-	  
+	  <h1>Benedikts</h1>
 	  <script src="index.js"></script>
   </body>
 </html>
