--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
   <h3>Skolēni</h3>
   <!--savu vārdu pievieno jaunā paragrāfā zem komentāra--> 
+	  <p>Rihards Rauls</p>
 	  
 	  <script src="index.js"></script>
   </body>
